syntax = "proto3";

package NetProto;

enum ASType {
  AS_TYPE_GRID = 0;
  AS_TYPE_TEXTURE = 1;
  AS_TYPE_OCTREE = 2;
  AS_TYPE_CONTREE = 3;
  AS_TYPE_BRICKMAP = 4;
}

message SetAS {
  ASType type = 1;
}

message RequestFileEntries {
  string file = 1;
}

message ReturnFileEntries {
  repeated string file_extensions = 1;
}

message ReturnDirEntries {
  repeated string dir_files = 1;
}
